--- a/index.html
+++ b/index.html
@@ -7,8 +7,49 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
+        <script src="https://kit.fontawesome.com/c3ece0a22b.js" crossorigin="anonymous"></script>
     </head>
     <body>
+        <header>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-4 text-uppercase text-center" >
+                    <strong>start bootstrap</strong>
+                </div>
+                <div class="col-lg-8">
+                   <ul class="list-inline text-uppercase text-center">
+                   <li><strong>portfolio</strong></li>
+                   <li><strong>about</strong></li>
+                   <li><strong>contact</strong></li>
+                   </ul>
+                </div>
+            </div>
+            </div>
+        </header>
+        <main class="jumbotron">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-4"></div>
+                    <div class="col-lg-4">
+                        <img src="img/avatar.svg" alt="avatar" class="center-block">
+                        <p class="text-uppercase text-center h2">
+                            <strong>start bootstrap</strong>
+                        </p>
+                        <p class="text-center">
+                        <i class="fas fa-star"></i>
+                        </p>
+                        <p>
+                            <ul class="list-inline text-center">
+                                <li>Graphic Artist - </li>
+                                <li>Web Designer - </li>
+                                <li>Illustrator</li>
+                            </ul>
+                        </p>
+                    </div>
+                    <div class="col-lg-4"></div>
 
+                </div>
+            </div>
+        </main>
     </body>
 </html>
