--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="col-lg-4 text-uppercase text-center" >
                     <strong>start bootstrap</strong>
                 </div>
-                <div class="col-lg-8">
+                <div class="col-lg-8 hidden-xs">
                    <ul class="list-inline text-uppercase text-center">
                    <li><strong>portfolio</strong></li>
                    <li><strong>about</strong></li>
@@ -30,8 +30,8 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-4"></div>
-                    <div class="col-lg-4">
-                        <img src="img/avatar.svg" alt="avatar" class="center-block">
+                    <div class="col-xs-12 col-lg-4">
+                        <img src="img/avatar.svg" alt="avatar" class="center-block img-responsive">
                         <p class="text-uppercase text-center h2">
                             <strong>start bootstrap</strong>
                         </p>
@@ -40,14 +40,13 @@
                         </p>
                         <p>
                             <ul class="list-inline text-center">
-                                <li>Graphic Artist - </li>
-                                <li>Web Designer - </li>
+                                <li>Graphic Artist -</li>
+                                <li>Web Designer -</li>
                                 <li>Illustrator</li>
                             </ul>
                         </p>
                     </div>
                     <div class="col-lg-4"></div>
-
                 </div>
             </div>
         </main>
