--- a/index.html
+++ b/index.html
@@ -11,20 +11,25 @@
     </head>
     <body>
         <header>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-4 text-uppercase text-center" >
+                <div class="container">
+                    <div class="row">
+                <div class="col-sm-4 text-uppercase text-left hidden-xs" >
                     <strong>start bootstrap</strong>
                 </div>
-                <div class="col-lg-8 hidden-xs">
-                   <ul class="list-inline text-uppercase text-center">
+                <div class="col-sm-8 hidden-xs">
+                   <ul class="list-inline text-uppercase text-right">
                    <li><strong>portfolio</strong></li>
                    <li><strong>about</strong></li>
                    <li><strong>contact</strong></li>
                    </ul>
                 </div>
-            </div>
-            </div>
+                <div class="col-xs-6">
+                    <span class="visible-xs-* hidden-sm text-left"><strong>start bootstrap</strong></span>
+                </div>
+                <div class="col-xs-6 visible-xs-* hidden-sm text-right"><i class="fas fa-bars"></i>
+                </div>
+                </div>
+                </div>
         </header>
         <main class="jumbotron">
             <div class="container-fluid">
