--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                    </ul>
                 </div>
                 <div class="col-xs-6">
-                    <span class="visible-xs-* hidden-sm text-left"><strong>start bootstrap</strong></span>
+                    <span class="visible-xs-* hidden-sm hidden-md hidden-lg text-left"><strong>start bootstrap</strong></span>
                 </div>
-                <div class="col-xs-6 visible-xs-* hidden-sm text-right"><i class="fas fa-bars"></i>
+                <div class="col-xs-6 visible-xs-* hidden-sm hidden-md hidden-lg text-right"><i class="fas fa-bars"></i>
                 </div>
                 </div>
                 </div>
