--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
                    </ul>
                 </div>
                 <div class="col-xs-6">
-                    <span class="visible-xs-* hidden-sm hidden-md hidden-lg text-left"><strong>start bootstrap</strong></span>
+                    <span class="visible-xs-* hidden-sm hidden-md hidden-lg text-left text-uppercase">
+                        <strong>start bootstrap</strong>
+                    </span>
                 </div>
                 <div class="col-xs-6 visible-xs-* hidden-sm hidden-md hidden-lg text-right"><i class="fas fa-bars"></i>
                 </div>
@@ -40,15 +42,15 @@
                         <p class="text-uppercase text-center h2">
                             <strong>start bootstrap</strong>
                         </p>
+
+                            <p class="text-center">
+                            <span class="linea-dx"></span>
+                            <i class="fas fa-star"></i>
+                            <span class="linea-sx"></span>
+                            </p>
+                    
                         <p class="text-center">
-                        <i class="fas fa-star"></i>
-                        </p>
-                        <p>
-                            <ul class="list-inline text-center">
-                                <li>Graphic Artist -</li>
-                                <li>Web Designer -</li>
-                                <li>Illustrator</li>
-                            </ul>
+                            <span class="h6">Graphic Artist - Web Designer - Illustrator</span>
                         </p>
                     </div>
                     <div class="col-lg-4"></div>
