--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Bootstrap-Freelancer</title>
+        <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700&display=swap" rel="stylesheet">
+
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
@@ -48,9 +50,9 @@
                             <i class="fas fa-star"></i>
                             <span class="linea-sx"></span>
                             </p>
-                    
+
                         <p class="text-center">
-                            <span class="h6">Graphic Artist - Web Designer - Illustrator</span>
+                            <span class="h5">Graphic Artist - Web Designer - Illustrator</span>
                         </p>
                     </div>
                     <div class="col-lg-4"></div>
