--- a/index.html
+++ b/index.html
@@ -44,17 +44,19 @@
                         <p class="text-uppercase text-center h2">
                             <strong>start bootstrap</strong>
                         </p>
-
-                            <p class="text-center">
-                            <span class="linea-dx"></span>
-                            <i class="fas fa-star"></i>
-                            <span class="linea-sx"></span>
-                            </p>
-
+                        <div class="text-center" id="star-line">
+                        <span class="linea"></span>
+                        <span><i class="fas fa-star"></i></span>
+                        <span class="linea"></span>
+                    </div>
                         <p class="text-center">
                             <span class="h5">Graphic Artist - Web Designer - Illustrator</span>
                         </p>
+
                     </div>
+                    </div>
+                    </div>
+                </div>
                     <div class="col-lg-4"></div>
                 </div>
             </div>
