--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header>
                 <div class="container">
                     <div class="row">
-                <div class="col-sm-4 text-uppercase text-left hidden-xs" >
+                <div class="col-sm-4 text-uppercase text-left hidden-xs " >
                     <strong>start bootstrap</strong>
                 </div>
                 <div class="col-sm-8 hidden-xs">
@@ -36,7 +36,7 @@
                 </div>
         </header>
         <main class="jumbotron">
-            <div class="container-fluid">
+            <div class="container">
                 <div class="row">
                     <div class="col-lg-4"></div>
                     <div class="col-xs-12 col-lg-4">
@@ -52,7 +52,6 @@
                         <p class="text-center">
                             <span class="h5">Graphic Artist - Web Designer - Illustrator</span>
                         </p>
-
                     </div>
                     </div>
                     </div>
