portfolio-about-contact me

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Bootstrap-Freelancer</title>
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700&display=swap" rel="stylesheet">
-
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
@@ -44,21 +43,120 @@
                         <p class="text-uppercase text-center h2">
                             <strong>start bootstrap</strong>
                         </p>
-                        <div class="text-center" id="star-line">
-                        <span class="linea"></span>
-                        <span><i class="fas fa-star"></i></span>
-                        <span class="linea"></span>
+                        <div class="separatore center-block">
+                        <i class="fas fa-star"></i>
                     </div>
                         <p class="text-center">
                             <span class="h5">Graphic Artist - Web Designer - Illustrator</span>
                         </p>
                     </div>
                     </div>
-                    </div>
                 </div>
+            </div>
                     <div class="col-lg-4"></div>
                 </div>
             </div>
         </main>
+        <section class="portfolio">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4"></div>
+                    <div class="col-lg-4">
+                    <p><h2 class="text-center text-uppercase"><strong>portfolio</strong></h2></p>
+
+                    <div class="separatore center-block">
+
+                    <i class="fas fa-star"></i>
+                </div>
+                <div class="col-lg-4"></div>
+                </div>
+            </div>
+        </section>
+        <section class="images">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <img src="images/cabin.png" alt="cabin" class="margin-bottom">
+                        <img src="images/game.png" alt="game">
+
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="images/cake.png" alt="cake" class="margin-bottom">
+                        <img src="images/safe.png" alt="safe">
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="images/circus.png" alt="circus" class="margin-bottom">
+                        <img src="images/submarine.png" alt="submarine">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="about-header">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4"></div>
+                    <div class="col-lg-4">
+                        <p><h2 class="text-center text-uppercase"><strong>about</strong></h2></p>
+
+                        <div class="separatore center-block">
+
+                        <i class="fas fa-star"></i>
+                    </div>
+
+                    </div>
+                    <div class="col-lg-4"></div>
+                </div>
+            </div>
+        </section>
+        <section class="about-content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3"></div>
+                    <div class="col-lg-3">
+                        <p>Freelancer is a free bootstrap theme created by Start Bootstrap.
+                            The download includes the complete source files including HTML,
+                             CSS, and JavaScript as well as optional SASS stylesheets for easy customization.
+                        </p>
+                    </div>
+                    <div class="col-lg-3">
+                        <p>You can create your own custom avatar for the masthead,
+                             change the icon in the dividers,
+                            and add your email address to the contact form to make it fully functional!
+                        </p>
+                    </div>
+                    <div class="col-lg-3"></div>
+                </div>
+            </div>
+        </section>
+        <section class="contact-me">
+            <div class="container">
+                <div class="row">
+                    <p>
+                        <h2 class="text-center text-uppercase"><strong>contact me<strong>
+                        </h2>
+                    </p>
+                    <div class="separatore center-block">
+                    <i class="fas fa-star"></i>
+                    </div>
+                    <div class="form">
+                        <input type="text" class="form-control" placeholder="Name">
+                        <input type="text" class="form-control" placeholder="Email Address">
+                        <input type="text" class="form-control" placeholder="Phone Number">
+                        <textarea class="form-control" rows="3">Message</textarea>
+                    </div>
+                    <div class="send">
+                        <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>
+                    </div>
+
+
+
+
+
+
+                </div>
+
+            </div>
+
+        </section>
     </body>
 </html>
