correzioni text-center e section contact me

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <p class="text-uppercase text-center h2">
                             <strong>start bootstrap</strong>
                         </p>
-                        <div class="separatore center-block">
+                        <div class="separatore center-block text-center">
                         <i class="fas fa-star"></i>
                     </div>
                         <p class="text-center">
@@ -64,7 +64,7 @@
                     <div class="col-lg-4">
                     <p><h2 class="text-center text-uppercase"><strong>portfolio</strong></h2></p>
 
-                    <div class="separatore center-block">
+                    <div class="separatore center-block text-center">
 
                     <i class="fas fa-star"></i>
                 </div>
@@ -98,7 +98,7 @@
                     <div class="col-lg-4">
                         <p><h2 class="text-center text-uppercase"><strong>about</strong></h2></p>
 
-                        <div class="separatore center-block">
+                        <div class="separatore center-block text-center">
 
                         <i class="fas fa-star"></i>
                     </div>
@@ -131,11 +131,11 @@
         <section class="contact-me">
             <div class="container">
                 <div class="row">
-                    <p>
-                        <h2 class="text-center text-uppercase"><strong>contact me<strong>
+                    <div class="col-lg-6 col-lg-offset-3">
+                    <p><h2 class="text-center text-uppercase"><strong>contact me<strong>
                         </h2>
                     </p>
-                    <div class="separatore center-block">
+                    <div class="separatore center-block text-center">
                     <i class="fas fa-star"></i>
                     </div>
                     <div class="form">
@@ -147,13 +147,8 @@
                     <div class="send">
                         <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>
                     </div>
-
-
-
-
-
-
                 </div>
+            </div>
 
             </div>
 
